[gd_scene load_steps=4 format=3 uid="uid://gyr3j78vaevw"]

[ext_resource type="Script" path="res://SCRIPTS/UI/CombatHUD/InventoryItemEntry.gd" id="1_fncin"]
[ext_resource type="Texture2D" uid="uid://bvowbij7bann8" path="res://ART/Icons/Items/generic_mag_ranged.png" id="2_eefj8"]
[ext_resource type="FontFile" uid="uid://dbk37dbkpdegv" path="res://ART/Fonts/ClassicShit.ttf" id="3_olfui"]

[node name="InventoryItemEntry" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 3
anchors_preset = 0
focus_mode = 2
script = ExtResource("1_fncin")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SelectedParent" type="ColorRect" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
color = Color(0.560955, 0.560955, 0.560955, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_eefj8")
expand_mode = 1

[node name="ItemName" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_olfui")
theme_override_font_sizes/font_size = 20
text = "ItemName"
clip_text = true

[node name="ItemUsage" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_olfui")
theme_override_font_sizes/font_size = 20
text = "100"
clip_text = true
